# nucleo-f429zi

./: Cargo.toml  LICENSE  README.md  memory.x
examples/: blinky.rs  blinky_triple.rs
src/: leds.rs  lib.rs
